--- a/src/main/resources/templates/categoria/index.html
+++ b/src/main/resources/templates/categoria/index.html
@@ -6,16 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
  
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-    <title>Olá, mundo!</title>
+   <meta content="" name="description">
+  <meta content="" name="keywords">
+  <!-- Favicons -->
+  <link href="" rel="icon" th:href="@{/img/favicon.png}">
+  <link href="" rel="apple-touch-icon" th:href="@{/img/apple-touch-icon.png}">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <!-- Vendor CSS Files -->
+  <link href="" rel="stylesheet" th:href="@{/vendor/aos/aos.css}">
+  <link href="" rel="stylesheet" th:href="@{/vendor/bootstrap/css/bootstrap.min.css}">
+  <link href="" rel="stylesheet" th:href="@{/vendor/bootstrap-icons/bootstrap-icons.css}">
+  <link href="" rel="stylesheet" th:href="@{/vendor/boxicons/css/boxicons.min.css}">
+  <link href="" rel="stylesheet" th:href="@{/vendor/glightbox/css/glightbox.min.css}">
+  <link href="" rel="stylesheet" th:href="@{/vendor/swiper/swiper-bundle.min.css}">
+  <!-- Template Main CSS File -->
+  <link href="" rel="stylesheet" th:href="@{/css/style.css}">
+  
+    <title>Cadastro Categoria</title>
   </head>
   <body>
 	  
 	  <header th:include="fragmentos::header"></header>
 	  
-	  <main class="container">
+	  <main class="container" style="margin-top: 100px;">
 			<h1>Categoria</h1>
 			<form method="post" th:action="@{/categoria/salvar}" th:object="${categoria}">
 				<div class="form-group">
