--- a/src/main/resources/templates/fragmentos.html
+++ b/src/main/resources/templates/fragmentos.html
@@ -6,43 +6,52 @@
 	<body>
 		
 		<div th:fragment="header">
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-				<a class="navbar-brand" href="#">Navbar</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
-					aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-			
-				<div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-					<ul class="navbar-nav mr-auto">
-						<li class="nav-item active">
-							<a class="nav-link" href="#">Home <span class="sr-only">(página atual)</span></a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Link</a>
-						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-								aria-haspopup="true" aria-expanded="false">
-								Dropdown
-							</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item" href="#">Ação</a>
-								<a class="dropdown-item" href="#">Outra ação</a>
-								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#">Algo mais aqui</a>
-							</div>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link disabled" href="#">Desativado</a>
-						</li>
-					</ul>
-					<form class="form-inline my-2 my-lg-0">
-						<input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-					</form>
+			<!-- ======= Header ======= -->
+			<header id="header" class="fixed-top d-flex align-items-center">
+				<div class="container d-flex align-items-center">
+		
+					<div class="logo me-auto">
+						<h1><a href="#">Projeto Estoque</a></h1>
+		
+					</div>
+		
+					<nav id="navbar" class="navbar order-last order-lg-0">
+						<ul>
+							<li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+							<li><a class="nav-link scrollto" href="#services">Services</a></li>
+							<li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
+							<li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
+							<li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+							<li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
+								<ul>
+									<li><a class="nav-link scrollto" href="#about">About Us</a></li>
+									<li><a class="nav-link scrollto" href="#team">Team</a></li>
+									<li><a class="nav-link scrollto" href="#testimonials">Testimonials</a></li>
+									<li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i
+												class="bi bi-chevron-right"></i></a>
+										<ul>
+											<li><a href="#">Deep Drop Down 1</a></li>
+											<li><a href="#">Deep Drop Down 2</a></li>
+											<li><a href="#">Deep Drop Down 3</a></li>
+											<li><a href="#">Deep Drop Down 4</a></li>
+											<li><a href="#">Deep Drop Down 5</a></li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+						</ul>
+						<i class="bi bi-list mobile-nav-toggle"></i>
+					</nav><!-- .navbar -->
+		
+					<div class="header-social-links d-flex align-items-center">
+						<a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+						<a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+						<a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+						<a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+					</div>
+		
 				</div>
-			</nav>
+			</header><!-- End Header -->
 		</div>
 		
 		<div th:fragment="footer">
