--- a/src/main/resources/templates/cliente/index.html
+++ b/src/main/resources/templates/cliente/index.html
@@ -23,40 +23,52 @@
   <!-- Template Main CSS File -->
   <link href="" rel="stylesheet" th:href="@{/css/style.css}">
   
-    <title>Cadastro Produto</title>
+    <title>Cadastro Cliente</title>
   </head>
   <body>
 	  
 	  <header th:include="fragmentos::header"></header>
 	  
 	  <main class="container" style="margin-top: 100px;">
-			<h1>Produto</h1>
-			<form method="post" th:action="@{/produto/salvar}" th:object="${produto}">
+			<h1>Cliente</h1>
+			<form method="post" th:action="@{/cliente/salvar}" th:object="${cliente}">
 				<div class="form-group">
 					<label for="exampleInputEmail1">Codigo</label>
 					<input th:field="*{id}" type="text"  readonly class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
 						placeholder="">
 				</div>
 				<div class="form-group">
-					<label for="exampleInputPassword1">Quantidade no estoque</label>
-					<input th:field="*{estoque}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Quantidade no estoque">
+					<label for="exampleInputPassword1">Nome</label>
+					<input th:field="*{nome}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Nome">
 				</div>
 				<div class="form-group">
-					<label for="exampleInputPassword1">Nome do Produto</label>
-					<input th:field="*{nome}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Nome do Produto">
+					<label for="exampleInputPassword1">CPF</label>
+					<input th:field="*{cpf}" type="text" class="form-control" id="exampleInputPassword1" placeholder="CPF">
 				</div>
 				<div class="form-group">
-					<label for="exampleInputPassword1">Valor</label>
-					<input th:field="*{valor}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Valor">
+					<label for="exampleInputPassword1">Data Nascimento</label>
+					<input th:field="*{dataNascimento}" type="date" class="form-control" id="exampleInputPassword1" placeholder="">
 				</div>
 				<div class="form-group">
-					<label for="exampleInputPassword1">Categoria</label>
-					<select class="form-control" th:field="*{categoria}">
-						<option value=""> Selecione a categoria...</option>
-						<option th:each="item:${listacategoria}" th:value="${item.id}" th:text="${item.descricao}"></option>
-					</select>
+					<label for="exampleInputPassword1">Email</label>
+					<input th:field="*{email}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Email" aria-describedby="emailHelp">
 				</div>
-
+				<div class="form-group">
+					<label for="exampleInputPassword1">Telefone</label>
+					<input th:field="*{telefone}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Telefone">
+				</div>
+				<div class="form-group">
+					<label for="exampleInputPassword1">Cidade</label>
+					<input th:field="*{cidade}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Cidade">
+				</div>
+				<div class="form-group">
+					<label for="exampleInputPassword1">Rua</label>
+					<input th:field="*{rua}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Rua">
+				</div>
+				<div class="form-group">
+					<label for="exampleInputPassword1">Estado</label>
+					<input th:field="*{estado}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Estado">
+				</div>
 				<button type="submit" class="btn btn-primary">Salvar</button>
 			</form>
 			
