--- a/src/main/resources/templates/cliente/listar.html
+++ b/src/main/resources/templates/cliente/listar.html
@@ -23,42 +23,68 @@
   <!-- Template Main CSS File -->
   <link href="" rel="stylesheet" th:href="@{/css/style.css}">
   
-    <title>Cadastro Produto</title>
+    <title>Cadastro Cliente</title>
   </head>
   <body>
 	  
 	  <header th:include="fragmentos::header"></header>
 	  
 	  <main class="container" style="margin-top: 100px;">
-			<h1>Produto</h1>
-			<form method="post" th:action="@{/produto/salvar}" th:object="${produto}">
-				<div class="form-group">
-					<label for="exampleInputEmail1">Codigo</label>
-					<input th:field="*{id}" type="text"  readonly class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-						placeholder="">
-				</div>
-				<div class="form-group">
-					<label for="exampleInputPassword1">Quantidade no estoque</label>
-					<input th:field="*{estoque}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Quantidade no estoque">
-				</div>
-				<div class="form-group">
-					<label for="exampleInputPassword1">Nome do Produto</label>
-					<input th:field="*{nome}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Nome do Produto">
-				</div>
-				<div class="form-group">
-					<label for="exampleInputPassword1">Valor</label>
-					<input th:field="*{valor}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Valor">
-				</div>
-				<div class="form-group">
-					<label for="exampleInputPassword1">Categoria</label>
-					<select class="form-control" th:field="*{categoria}">
-						<option value=""> Selecione a categoria...</option>
-						<option th:each="item:${listacategoria}" th:value="${item.id}" th:text="${item.descricao}"></option>
-					</select>
-				</div>
-
-				<button type="submit" class="btn btn-primary">Salvar</button>
-			</form>
+			<h1>Listar Cliente</h1>
+			
+			<div style="margin: 20px">
+				<a class="btn btn-primary" th:href="@{/cliente/novo}">Incluir</a>
+			</div>
+			
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th scope="col">Código</th>
+						<th scope="col">Nome</th>
+						<th scope="col">CPF</th>
+						<th scope="col">Data Nascimento</th>
+						<th scope="col">Email</th>
+						<th scope="col">Telefone</th>
+						<th scope="col">Cidade</th>
+						<th scope="col">Alterar</th>
+						<th scope="col">Excluir</th>
+						
+						
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="item:${lista}">
+						<th scope="row" th:text="${item.id}"></th>
+						<td th:text="${item.nome}"></td>
+						<td th:text="${item.cpf}"></td>
+						<td  th:text="${#temporals.format(item.dataNascimento, 'dd/MM/yyyy')}"></td>
+						<td th:text="${item.email}"></td>
+						<td th:text="${item.telefone}"></td>
+						<td th:text="${item.cidade}"></td>
+						<td><a class="btn btn-info" th:href="@{/cliente/prealterar(id=${item.id})}">Alterar</a></td>
+						<td><button class="btn btn-info excluir" data-target="#myModal" type="button" th:id="${item.id}" data-value="/cliente/excluir?id={id}" data-toggle="modal" >Excluir</button></td>
+					</tr>
+				</tbody>
+			</table>
+			
+			<!--CONFIRM MODAL-->
+		<div class="modal fade" tabindex="-1" role="dialog" id="myModal" th:fragment="modal">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+						<h4 class="modal-title">Atenção</h4>
+					</div>
+					<div class="modal-body">
+						<p>Confirma a exclusão?</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+						<button id="ok_confirm" type="button" class="btn btn-primary">Ok</button>
+					</div>
+				</div> <!-- /.modal-content -->
+			</div> <!-- /.modal-dialog -->
+		</div> <!-- /.modal -->
 			
 			<div th:if="${retorno} !=null" class="row">
 				<span th:if="${retorno}" class="alert alert-success" th:text="${mensagem}"></span>
@@ -68,13 +94,13 @@
 	  
 	  <footer th:include="fragmentos::footer"></footer>
 	  
-  </body>	  
-    
-
+ 	  
+ 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <div th:include="fragmentos::script"></div>
   </body>
 </html>
