--- a/src/main/resources/templates/produto/listar.html
+++ b/src/main/resources/templates/produto/listar.html
@@ -23,14 +23,14 @@
   <!-- Template Main CSS File -->
   <link href="" rel="stylesheet" th:href="@{/css/style.css}">
   
-    <title>Cadastro Categoria</title>
+    <title>Cadastro Produto</title>
   </head>
   <body>
 	  
 	  <header th:include="fragmentos::header"></header>
 	  
 	  <main class="container" style="margin-top: 100px;">
-			<h1>Listar Categoria</h1>
+			<h1>Listar Produto</h1>
 			
 			<div style="margin: 20px">
 				<a class="btn btn-primary" th:href="@{/produto/novo}">Incluir</a>
@@ -43,7 +43,7 @@
 						<th scope="col">Quantidade Estoque</th>
 						<th scope="col">Nome</th>
 						<th scope="col">Valor</th>
-						<th scope="col">Codigo Categoria</th>
+						<th scope="col">Categoria</th>
 						<th scope="col">Alterar</th>
 						<th scope="col">Excluir</th>
 						
@@ -54,10 +54,10 @@
 						<th scope="row" th:text="${item.id}"></th>
 						<td th:text="${item.estoque}"></td>
 						<td th:text="${item.nome}"></td>
-						<td th:text="${item.valor}"></td>
-						<td th:text="${item.idcategoria}"></td>
-						<td><a class="btn btn-info" th:href="@{/categoria/prealterar(id=${item.id})}">Alterar</a></td>
-						<td><button class="btn btn-info excluir" data-target="#myModal" type="button" th:id="${item.id}" data-value="/categoria/excluir?id={id}" data-toggle="modal" >Excluir</button></td>
+						<td th:text="|R$ ${{item.valor}}|"></td>
+						<td th:text="${item.categoria.descricao}"></td>
+						<td><a class="btn btn-info" th:href="@{/produto/prealterar(id=${item.id})}">Alterar</a></td>
+						<td><button class="btn btn-info excluir" data-target="#myModal" type="button" th:id="${item.id}" data-value="/produto/excluir?id={id}" data-toggle="modal" >Excluir</button></td>
 					</tr>
 				</tbody>
 			</table>
