--- a/src/main/resources/templates/fragmentos.html
+++ b/src/main/resources/templates/fragmentos.html
@@ -12,31 +12,29 @@
 		
 					<div class="logo me-auto">
 						<h1><a href="#">Projeto Estoque</a></h1>
-		
 					</div>
 		
 					<nav id="navbar" class="navbar order-last order-lg-0">
 						<ul>
-							<li><a class="nav-link scrollto active" th:href="@{/categoria/listar}">Listar Categoria</a></li>
-							<li><a class="nav-link scrollto" href="#services">Services</a></li>
-							<li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-							<li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
+							<li><a class="nav-link scrollto active" th:href="@{/principal}">Home</a></li>
 							<li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-							<li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
+							
+							<li class="dropdown"><a href="#"><span>Listagem</span> <i class="bi bi-chevron-down"></i></a>
 								<ul>
-									<li><a class="nav-link scrollto" href="#about">About Us</a></li>
-									<li><a class="nav-link scrollto" href="#team">Team</a></li>
-									<li><a class="nav-link scrollto" href="#testimonials">Testimonials</a></li>
-									<li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i
-												class="bi bi-chevron-right"></i></a>
-										<ul>
-											<li><a href="#">Deep Drop Down 1</a></li>
-											<li><a href="#">Deep Drop Down 2</a></li>
-											<li><a href="#">Deep Drop Down 3</a></li>
-											<li><a href="#">Deep Drop Down 4</a></li>
-											<li><a href="#">Deep Drop Down 5</a></li>
-										</ul>
-									</li>
+									<li><a class="nav-link scrollto" th:href="@{/categoria/listar}">Listar Categoria</a></li>
+									<li><a class="nav-link scrollto" th:href="@{/produto/listar}">Listar Produto</a></li>
+									<li><a class="nav-link scrollto" th:href="@{/cliente/listar}">Listar Cliente</a></li>
+									<li><a class="nav-link scrollto" th:href="@{/fornecedor/listar}">Listar Fornecedor</a></li>
+								</ul>
+							</li>
+							
+							
+							<li class="dropdown"><a href="#"><span>Cadastrar</span> <i class="bi bi-chevron-down"></i></a>
+								<ul>
+									<li><a class="nav-link scrollto" th:href="@{/categoria/novo}">Categoria</a></li>
+									<li><a class="nav-link scrollto" th:href="@{/produto/novo}">Produto</a></li>
+									<li><a class="nav-link scrollto" th:href="@{/cliente/novo}">Cliente</a></li>
+									<li><a class="nav-link scrollto" th:href="@{/fornecedor/novo}">Fornecedor</a></li>
 								</ul>
 							</li>
 						</ul>
