Atualização cadastro basico
Atualização cadastro basico

--- a/src/main/resources/templates/categoria/index.html
+++ b/src/main/resources/templates/categoria/index.html
@@ -29,7 +29,7 @@
 	  
 	  <header th:include="fragmentos::header"></header>
 	  
-	  <main class="container" style="margin-top: 100px;">
+	  <main class="container" style="margin: 100px;">
 			<h1>Categoria</h1>
 			<form method="post" th:action="@{/categoria/salvar}" th:object="${categoria}">
 				<div class="form-group">
