--- a/src/main/resources/templates/fornecedor/index.html
+++ b/src/main/resources/templates/fornecedor/index.html
@@ -29,7 +29,7 @@
 	  
 	  <header th:include="fragmentos::header"></header>
 	  
-	  <main class="container" style="margin-top: 100px;">
+	  <main class="container" style="margin: 100px;">
 			<h1>Fornecedor</h1>
 			<form method="post" th:action="@{/fornecedor/salvar}" th:object="${fornecedor}">
 				<div class="form-group">
