--- a/src/main/resources/templates/fornecedor/listar.html
+++ b/src/main/resources/templates/fornecedor/listar.html
@@ -29,7 +29,7 @@
 	  
 	  <header th:include="fragmentos::header"></header>
 	  
-	  <main class="container" style="margin-top: 100px;">
+	  <main class="container" style="margin: 100px;">
 			<h1>Listar Fornecedor</h1>
 			
 			<div style="margin: 20px">
