--- a/src/main/resources/templates/fragmentos.html
+++ b/src/main/resources/templates/fragmentos.html
@@ -89,18 +89,19 @@
 							</div>
 		
 							<div class="col-lg-3 col-md-6 footer-links">
-								<h4>Outros Serviçoes</h4>
+								<h4>Cadastro</h4>
 								<ul>
-									<li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-									<li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-									<li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-									<li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-									<li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+									<li><i class="bx bx-chevron-right"></i> <a th:href="@{/categoria/novo}">Categoria</a></li>
+									<li><i class="bx bx-chevron-right"></i> <a th:href="@{/produto/novo}">Produto</a></li>
+									<li><i class="bx bx-chevron-right"></i> <a th:href="@{/cliente/novo}">Cliente</a></li>
+									<li><i class="bx bx-chevron-right"></i> <a th:href="@{/fornecedor/novo}">Fornecedor</a></li>
+									
 								</ul>
 							</div>
 		
 							<div class="col-lg-4 col-md-6 footer-newsletter">
-								<h4>Outro assunto</h4>
+								<h4>Duvidas ?</h4>
+								<p><strong>Nos encaminhe sua duvida</strong></p>
 								<form action="" method="post">
 									<input type="email" name="email"><input type="submit" value="Enviar">
 								</form>
