--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -988,3 +988,12 @@ section {
   font-size: 13px;
   color: #364146;
 }
+
+.formulario {
+	padding: 30px;
+	margin-left: auto;
+	margin-bottom: 50px;
+	margin-top: 120px;
+}
+
+
