--- a/src/main/resources/templates/categoria/index.html
+++ b/src/main/resources/templates/categoria/index.html
@@ -29,19 +29,19 @@
 	  
 	  <header th:include="fragmentos::header"></header>
 	  
-	  <main class="container" style="margin: 100px;">
-			<h1>Categoria</h1>
-			<form method="post" th:action="@{/categoria/salvar}" th:object="${categoria}">
-				<div class="form-group">
+	  <main class="container">
+			<form class="formulario" method="post" th:action="@{/categoria/salvar}" th:object="${categoria}">
+				<h1>Categoria</h1>
+				<div class="form-group mb-2">
 					<label for="exampleInputEmail1">Codigo</label>
 					<input th:field="*{id}" type="text"  readonly class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
 						placeholder="">
 				</div>
-				<div class="form-group">
+				<div class="form-group mb-2">
 					<label for="exampleInputPassword1">Descrição</label>
 					<input th:field="*{descricao}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Descrição">
 				</div>
-				<button type="submit" class="btn btn-primary">Salvar</button>
+				<button type="submit" class="btn btn-success" style="margin-top: 25px;">SALVAR</button>
 			</form>
 			
 			<div th:if="${retorno} !=null" class="row">
