--- a/src/main/resources/templates/categoria/listar.html
+++ b/src/main/resources/templates/categoria/listar.html
@@ -23,17 +23,17 @@
   <!-- Template Main CSS File -->
   <link href="" rel="stylesheet" th:href="@{/css/style.css}">
   
-    <title>Cadastro Categoria</title>
+    <title>Listar Categoria</title>
   </head>
   <body>
 	  
 	  <header th:include="fragmentos::header"></header>
 	  
 	  <main class="container" style="margin: 100px;">
-			<h1>Listar Categoria</h1>
+			<h1>LISTAR CATEGORIA</h1>
 			
-			<div style="margin: 20px">
-				<a class="btn btn-primary" th:href="@{/categoria/novo}">Incluir</a>
+			<div style="margin-top: 20px; margin-left: auto; margin-bottom: 30px;">
+				<a class="btn btn-info" th:href="@{/categoria/novo}">INCLUIR</a>
 			</div>
 			
 			<table class="table table-striped">
@@ -50,8 +50,8 @@
 					<tr th:each="item:${lista}">
 						<th scope="row" th:text="${item.id}"></th>
 						<td th:text="${item.descricao}"></td>
-						<td><a class="btn btn-info" th:href="@{/categoria/prealterar(id=${item.id})}">Alterar</a></td>
-						<td><button class="btn btn-info excluir" data-target="#myModal" type="button" th:id="${item.id}" data-value="/categoria/excluir?id={id}" data-toggle="modal" >Excluir</button></td>
+						<td><a class="btn btn-warning" th:href="@{/categoria/prealterar(id=${item.id})}">Alterar</a></td>
+						<td><button class="btn btn-danger excluir" data-target="#myModal" type="button" th:id="${item.id}" data-value="/categoria/excluir?id={id}" data-toggle="modal" >Excluir</button></td>
 					</tr>
 				</tbody>
 			</table>
