--- a/src/main/resources/templates/fornecedor/index.html
+++ b/src/main/resources/templates/fornecedor/index.html
@@ -29,43 +29,43 @@
 	  
 	  <header th:include="fragmentos::header"></header>
 	  
-	  <main class="container" style="margin: 100px;">
-			<h1>Fornecedor</h1>
-			<form method="post" th:action="@{/fornecedor/salvar}" th:object="${fornecedor}">
+	  <main class="container">
+			<form class="formulario" method="post" th:action="@{/fornecedor/salvar}" th:object="${fornecedor}">
+				<h1>Fornecedor</h1>
 				<div class="form-group">
 					<label for="exampleInputEmail1">Codigo</label>
 					<input th:field="*{id}" type="text"  readonly class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
 						placeholder="">
 				</div>
-				<div class="form-group">
+				<div class="form-group mb-2">
 					<label for="exampleInputPassword1">Razão</label>
 					<input th:field="*{razao}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Razão">
 				</div>
-				<div class="form-group">
+				<div class="form-group mb-2">
 					<label for="exampleInputPassword1">CNPJ</label>
 					<input th:field="*{cnpj}" type="text" class="form-control" id="exampleInputPassword1" placeholder="CNPJ">
 				</div>
-				<div class="form-group">
+				<div class="form-group mb-2">
 					<label for="exampleInputPassword1">Email</label>
 					<input th:field="*{email}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Email" aria-describedby="emailHelp">
 				</div>
-				<div class="form-group">
+				<div class="form-group mb-2">
 					<label for="exampleInputPassword1">Telefone</label>
 					<input th:field="*{telefone}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Telefone">
 				</div>
-				<div class="form-group">
+				<div class="form-group mb-2">
 					<label for="exampleInputPassword1">Cidade</label>
 					<input th:field="*{cidade}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Cidade">
 				</div>
-				<div class="form-group">
+				<div class="form-group mb-2">
 					<label for="exampleInputPassword1">Rua</label>
 					<input th:field="*{rua}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Rua">
 				</div>
-				<div class="form-group">
+				<div class="form-group mb-2">
 					<label for="exampleInputPassword1">Estado</label>
 					<input th:field="*{estado}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Estado">
 				</div>
-				<button type="submit" class="btn btn-primary">Salvar</button>
+				<button type="submit" class="btn btn-success" style="margin-top: 25px;">SALVAR</button>
 			</form>
 			
 			<div th:if="${retorno} !=null" class="row">
