--- a/src/main/resources/templates/produto/index.html
+++ b/src/main/resources/templates/produto/index.html
@@ -29,27 +29,27 @@
 	  
 	  <header th:include="fragmentos::header"></header>
 	  
-	  <main class="container" style="margin: 100px;">
-			<h1>Produto</h1>
-			<form method="post" th:action="@{/produto/salvar}" th:object="${produto}">
-				<div class="form-group">
+	  <main class="container">
+			<form class="formulario" method="post" th:action="@{/produto/salvar}" th:object="${produto}">
+				<h1>Produto</h1>
+				<div class="form-group mb-2">
 					<label for="exampleInputEmail1">Codigo</label>
 					<input th:field="*{id}" type="text"  readonly class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
 						placeholder="">
 				</div>
-				<div class="form-group">
+				<div class="form-group mb-2">
 					<label for="exampleInputPassword1">Quantidade no estoque</label>
 					<input th:field="*{estoque}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Quantidade no estoque">
 				</div>
-				<div class="form-group">
+				<div class="form-group mb-2">
 					<label for="exampleInputPassword1">Nome do Produto</label>
 					<input th:field="*{nome}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Nome do Produto">
 				</div>
-				<div class="form-group">
+				<div class="form-group mb-2">
 					<label for="exampleInputPassword1">Valor</label>
 					<input th:field="*{valor}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Valor">
 				</div>
-				<div class="form-group">
+				<div class="form-group mb-2">
 					<label for="exampleInputPassword1">Categoria</label>
 					<select class="form-control" th:field="*{categoria}">
 						<option value=""> Selecione a categoria...</option>
@@ -57,7 +57,7 @@
 					</select>
 				</div>
 
-				<button type="submit" class="btn btn-primary">Salvar</button>
+				<button type="submit" class="btn btn-success" style="margin-top: 25px;">SALVAR</button>
 			</form>
 			
 			<div th:if="${retorno} !=null" class="row">
