--- a/src/main/resources/templates/fragmentos.html
+++ b/src/main/resources/templates/fragmentos.html
@@ -36,6 +36,8 @@
 									<li><a class="nav-link scrollto" th:href="@{/fornecedor/novo}">Fornecedor</a></li>
 								</ul>
 							</li>
+							
+							<li><a class="nav-link scrollto active" th:href="@{/logout}">Sair</a></li>
 						</ul>
 						<i class="bi bi-list mobile-nav-toggle"></i>
 					</nav><!-- .navbar -->
