--- a/src/main/resources/templates/cliente/index.html
+++ b/src/main/resources/templates/cliente/index.html
@@ -69,6 +69,17 @@
 					<label for="exampleInputPassword1">Estado</label>
 					<input th:field="*{estado}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Estado">
 				</div>
+				<div class="form-group mb-2">
+					<label for="exampleInputPassword1">Usuario</label>
+					<input th:field="*{usuario.username}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Usuario">
+				</div>
+				<div class="form-group mb-2">
+					<label for="exampleInputPassword1">Senha</label>
+					<input th:field="*{usuario.password}" type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+				</div>
+				<div class="form-group mb-2">
+					<input th:field="*{usuario.id}" type="hidden">
+				</div>
 				<button type="submit" class="btn btn-success" style="margin-top: 25px;">SALVAR</button>
 			</form>
 			
