--- a/src/main/resources/templates/categoria/index.html
+++ b/src/main/resources/templates/categoria/index.html
@@ -1,64 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <!-- Meta tags Obrigatórias -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
- 
 
-   <meta content="" name="description">
-  <meta content="" name="keywords">
-  <!-- Favicons -->
-  <link href="" rel="icon" th:href="@{/img/favicon.png}">
-  <link href="" rel="apple-touch-icon" th:href="@{/img/apple-touch-icon.png}">
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-  <!-- Vendor CSS Files -->
-  <link href="" rel="stylesheet" th:href="@{/vendor/aos/aos.css}">
-  <link href="" rel="stylesheet" th:href="@{/vendor/bootstrap/css/bootstrap.min.css}">
-  <link href="" rel="stylesheet" th:href="@{/vendor/bootstrap-icons/bootstrap-icons.css}">
-  <link href="" rel="stylesheet" th:href="@{/vendor/boxicons/css/boxicons.min.css}">
-  <link href="" rel="stylesheet" th:href="@{/vendor/glightbox/css/glightbox.min.css}">
-  <link href="" rel="stylesheet" th:href="@{/vendor/swiper/swiper-bundle.min.css}">
-  <!-- Template Main CSS File -->
-  <link href="" rel="stylesheet" th:href="@{/css/style.css}">
-  
-    <title>Cadastro Categoria</title>
-  </head>
-  <body>
-	  
-	  <header th:include="fragmentos::header"></header>
-	  
-	  <main class="container">
-			<form class="formulario" method="post" th:action="@{/categoria/salvar}" th:object="${categoria}">
-				<h1>Categoria</h1>
-				<div class="form-group mb-2">
-					<label for="exampleInputEmail1">Codigo</label>
-					<input th:field="*{id}" type="text"  readonly class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-						placeholder="">
-				</div>
-				<div class="form-group mb-2">
-					<label for="exampleInputPassword1">Descrição</label>
-					<input th:field="*{descricao}" type="text" class="form-control" id="exampleInputPassword1" placeholder="Descrição">
-				</div>
-				<button  type="submit" class="btn btn-success" style="margin-top: 25px;">SALVAR</button>
-			</form>
-			
-			<div th:if="${retorno} !=null" class="row">
-				<span th:if="${retorno}" class="alert alert-success" th:text="${mensagem}"></span>
-				<span th:if="!${retorno}" class="alert alert-danger" th:text="${mensagem}"></span>
-			</div> 
-	  </main>
-	  
-	  <footer th:include="fragmentos::footer"></footer>
-	  
-  </body>	  
-    
+<head>
+	<!-- Meta tags Obrigatórias -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- JavaScript (Opcional) -->
-    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
+
+	<meta content="" name="description">
+	<meta content="" name="keywords">
+	<!-- Favicons -->
+	<link href="" rel="icon" th:href="@{/img/favicon.png}">
+	<link href="" rel="apple-touch-icon" th:href="@{/img/apple-touch-icon.png}">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<!-- Google Fonts -->
+	<link
+		href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+		rel="stylesheet">
+	<!-- Vendor CSS Files -->
+	<link href="" rel="stylesheet" th:href="@{/vendor/aos/aos.css}">
+	<link href="" rel="stylesheet" th:href="@{/vendor/bootstrap/css/bootstrap.min.css}">
+	<link href="" rel="stylesheet" th:href="@{/vendor/bootstrap-icons/bootstrap-icons.css}">
+	<link href="" rel="stylesheet" th:href="@{/vendor/boxicons/css/boxicons.min.css}">
+	<link href="" rel="stylesheet" th:href="@{/vendor/glightbox/css/glightbox.min.css}">
+	<link href="" rel="stylesheet" th:href="@{/vendor/swiper/swiper-bundle.min.css}">
+	<!-- Template Main CSS File -->
+	<link href="" rel="stylesheet" th:href="@{/css/style.css}">
+
+	<title>Cadastro Categoria</title>
+</head>
+
+<body>
+
+	<header th:include="fragmentos::header"></header>
+
+	<main class="container">
+		<form class="formulario" method="post" th:action="@{/categoria/salvar}" th:object="${categoria}">
+			<h1>Categoria</h1>
+			<div class="form-group mb-2">
+				<label for="exampleInputEmail1">Codigo</label>
+				<input th:field="*{id}" type="text" readonly class="form-control" id="exampleInputEmail1"
+					aria-describedby="emailHelp" placeholder="">
+			</div>
+			<div class="form-group mb-2">
+				<label for="exampleInputPassword1">Descrição</label>
+				<input th:field="*{descricao}" type="text" class="form-control" id="exampleInputPassword1"
+					placeholder="Descrição">
+			</div>
+			<button type="submit" class="btn btn-success" style="margin-top: 25px;">SALVAR</button>
+		</form>
+
+		<div th:if="${retorno} !=null" class="row">
+			<span th:if="${retorno}" class="alert alert-success" th:text="${mensagem}"></span>
+			<span th:if="!${retorno}" class="alert alert-danger" th:text="${mensagem}"></span>
+		</div>
+	</main>
+
+	<footer th:include="fragmentos::footer"></footer>
+
+</body>
+
+
+<!-- JavaScript (Opcional) -->
+<!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"
+	integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+	integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+	crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+	integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+	crossorigin="anonymous"></script>
+</body>
+
 </html>
