--- a/src/main/resources/templates/fornecedor/listar.html
+++ b/src/main/resources/templates/fornecedor/listar.html
@@ -1,71 +1,78 @@
 <!DOCTYPE html>
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <!-- Meta tags Obrigatórias -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
- 
 
-   <meta content="" name="description">
-  <meta content="" name="keywords">
-  <!-- Favicons -->
-  <link href="" rel="icon" th:href="@{/img/favicon.png}">
-  <link href="" rel="apple-touch-icon" th:href="@{/img/apple-touch-icon.png}">
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-  <!-- Vendor CSS Files -->
-  <link href="" rel="stylesheet" th:href="@{/vendor/aos/aos.css}">
-  <link href="" rel="stylesheet" th:href="@{/vendor/bootstrap/css/bootstrap.min.css}">
-  <link href="" rel="stylesheet" th:href="@{/vendor/bootstrap-icons/bootstrap-icons.css}">
-  <link href="" rel="stylesheet" th:href="@{/vendor/boxicons/css/boxicons.min.css}">
-  <link href="" rel="stylesheet" th:href="@{/vendor/glightbox/css/glightbox.min.css}">
-  <link href="" rel="stylesheet" th:href="@{/vendor/swiper/swiper-bundle.min.css}">
-  <!-- Template Main CSS File -->
-  <link href="" rel="stylesheet" th:href="@{/css/style.css}">
-  
-    <title>Listar Fornecedor</title>
-  </head>
-  <body>
-	  
-	  <header th:include="fragmentos::header"></header>
-	  
-	  <main class="container" style="margin: 100px;">
-			<h1>LISTAR FORNECEDOR</h1>
-			
-			<div style="margin-top: 20px; margin-left: auto; margin-bottom: 30px;">
-				<a class="btn btn-info" th:href="@{/fornecedor/novo}">INCLUIR</a>
-			</div>
-			
-			<table class="table table-striped">
-				<thead>
-					<tr>
-						<th scope="col">Código</th>
-						<th scope="col">Razão</th>
-						<th scope="col">CNPJ</th>
-						<th scope="col">Email</th>
-						<th scope="col">Telefone</th>
-						<th scope="col">Cidade</th>
-						<th scope="col">Alterar</th>
-						<th scope="col">Excluir</th>
-						
-						
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="item:${lista}">
-						<th scope="row" th:text="${item.id}"></th>
-						<td th:text="${item.razao}"></td>
-						<td th:text="${item.cnpj}"></td>
-						<td th:text="${item.email}"></td>
-						<td th:text="${item.telefone}"></td>
-						<td th:text="${item.cidade}"></td>
-						<td><a class="btn btn-warning" th:href="@{/fornecedor/prealterar(id=${item.id})}">Alterar</a></td>
-						<td><button class="btn btn-danger excluir" data-target="#myModal" type="button" th:id="${item.id}" data-value="/fornecedor/excluir?id={id}" data-toggle="modal" >Excluir</button></td>
-					</tr>
-				</tbody>
-			</table>
-			
-			<!--CONFIRM MODAL-->
+<head>
+	<!-- Meta tags Obrigatórias -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
+	<meta content="" name="description">
+	<meta content="" name="keywords">
+	<!-- Favicons -->
+	<link href="" rel="icon" th:href="@{/img/favicon.png}">
+	<link href="" rel="apple-touch-icon" th:href="@{/img/apple-touch-icon.png}">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<!-- Google Fonts -->
+	<link
+		href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+		rel="stylesheet">
+	<!-- Vendor CSS Files -->
+	<link href="" rel="stylesheet" th:href="@{/vendor/aos/aos.css}">
+	<link href="" rel="stylesheet" th:href="@{/vendor/bootstrap/css/bootstrap.min.css}">
+	<link href="" rel="stylesheet" th:href="@{/vendor/bootstrap-icons/bootstrap-icons.css}">
+	<link href="" rel="stylesheet" th:href="@{/vendor/boxicons/css/boxicons.min.css}">
+	<link href="" rel="stylesheet" th:href="@{/vendor/glightbox/css/glightbox.min.css}">
+	<link href="" rel="stylesheet" th:href="@{/vendor/swiper/swiper-bundle.min.css}">
+	<!-- Template Main CSS File -->
+	<link href="" rel="stylesheet" th:href="@{/css/style.css}">
+
+	<title>Listar Fornecedor</title>
+</head>
+
+<body>
+
+	<header th:include="fragmentos::header"></header>
+
+	<main class="container" style="margin: 100px;">
+		<h1>LISTAR FORNECEDOR</h1>
+
+		<div style="margin-top: 20px; margin-left: auto; margin-bottom: 30px;">
+			<a class="btn btn-info" th:href="@{/fornecedor/novo}">INCLUIR</a>
+		</div>
+
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th scope="col">Código</th>
+					<th scope="col">Razão</th>
+					<th scope="col">CNPJ</th>
+					<th scope="col">Email</th>
+					<th scope="col">Telefone</th>
+					<th scope="col">Cidade</th>
+					<th scope="col">Alterar</th>
+					<th scope="col">Excluir</th>
+
+
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="item:${lista}">
+					<th scope="row" th:text="${item.id}"></th>
+					<td th:text="${item.razao}"></td>
+					<td th:text="${item.cnpj}"></td>
+					<td th:text="${item.email}"></td>
+					<td th:text="${item.telefone}"></td>
+					<td th:text="${item.cidade}"></td>
+					<td><a class="btn btn-warning" th:href="@{/fornecedor/prealterar(id=${item.id})}">Alterar</a></td>
+					<td><button class="btn btn-danger excluir" data-target="#myModal" type="button" th:id="${item.id}"
+							data-value="/fornecedor/excluir?id={id}" data-toggle="modal">Excluir</button></td>
+				</tr>
+			</tbody>
+		</table>
+
+		<!--CONFIRM MODAL-->
 		<div class="modal fade" tabindex="-1" role="dialog" id="myModal" th:fragment="modal">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
@@ -83,22 +90,28 @@
 				</div> <!-- /.modal-content -->
 			</div> <!-- /.modal-dialog -->
 		</div> <!-- /.modal -->
-			
-			<div th:if="${retorno} !=null" class="row">
-				<span th:if="${retorno}" class="alert alert-success" th:text="${mensagem}"></span>
-				<span th:if="!${retorno}" class="alert alert-danger" th:text="${mensagem}"></span>
-			</div> 
-	  </main>
-	  
-	  <footer th:include="fragmentos::footer"></footer>
-	  
- 	  
- 
-    <!-- JavaScript (Opcional) -->
-    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <div th:include="fragmentos::script"></div>
-  </body>
+
+		<div th:if="${retorno} !=null" class="row">
+			<span th:if="${retorno}" class="alert alert-success" th:text="${mensagem}"></span>
+			<span th:if="!${retorno}" class="alert alert-danger" th:text="${mensagem}"></span>
+		</div>
+	</main>
+
+	<footer th:include="fragmentos::footer"></footer>
+
+
+
+	<!-- JavaScript (Opcional) -->
+	<!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.6.4.min.js"
+		integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+		crossorigin="anonymous"></script>
+	<div th:include="fragmentos::script"></div>
+</body>
+
 </html>
